Files roads-download-export-data-ver2.ipynb and blds-download-export-data-ver2.ipynb repaired

--- a/notebooks-blds/blds-download-export-data-ver2.ipynb
+++ b/notebooks-blds/blds-download-export-data-ver2.ipynb
@@ -238,6 +238,8 @@
     "# define the functions\n",
     "\n",
     "def convert_geojson_structure(original_dict):\n",
+    "    \"\"\"Convert the GeoJSON structure to the structure required by the API.\"\"\"\n",
+    "\n",
     "    new_dict = {}\n",
     "    new_dict[\"type\"] = \"FeatureCollection\"\n",
     "    new_dict[\"features\"] = []\n",
@@ -257,6 +259,7 @@
     "\n",
     "# append desired properties\n",
     "def append_properties(result, desired_geojson_structure):\n",
+    "    \"\"\"Add the desired properties to the result of the API call.\"\"\"\n",
     "\n",
     "    desired_properties = [\"ADM0_ISO\", \"SOVEREIGNT\",\n",
     "                          \"TYPE\", \"ADMIN\", \"GEOUNIT\", \"NAME\", \"NE_ID\",\n",
@@ -273,6 +276,7 @@
     "    return result\n",
     "\n",
     "def data_gen(feature):\n",
+    "    \"\"\" Get data from the API.\"\"\"\n",
     "\n",
     "    desired_geojson_structure = convert_geojson_structure(feature)\n",
     "\n",
@@ -283,7 +287,7 @@
     "        \"groupByKey\": \"source\",\n",
     "        \"groupByValues\": \"microsoft/BuildingFootprints,esri/Google_Africa_Buildings\",\n",
     "        \"format\": \"json\",\n",
-    "        \"time\": \"2023-06-01\",  # \"2018-01-01/2023-06-01/P1Y\"\n",
+    "        \"time\": \"2018-01-01/2023-06-01/P1Y\",  # \"2018-01-01/2023-06-01/P1Y\" 2023-06-01\n",
     "        }\n",
     "    headers = {\n",
     "        \"accept\": \"application/json\",\n",
@@ -370,6 +374,7 @@
     "\n",
     "\n",
     "def connect_feat_data(feature, data):\n",
+    "    \"\"\"Connects the data to the feature of the GeoJSON file\"\"\"\n",
     "\n",
     "    rem_value_to_add = None\n",
     "    ai_value_to_add = None\n",
@@ -520,14 +525,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 0/209 [00:00<?, ?it/s]"
+      "  0%|          | 0/1 [00:00<?, ?it/s]"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 209/209 [1:59:48<00:00, 34.39s/it]  \n"
+      "100%|██████████| 1/1 [02:14<00:00, 134.92s/it]\n"
      ]
     }
    ],
@@ -551,7 +556,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "# import pandas as pd"
    ]
   },
   {
@@ -560,84 +565,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "d = {\n",
-    "    \"feature\": [],\n",
-    "    \"source\": [],\n",
-    "    \"timestamp\": [],\n",
-    "    \"value\": []\n",
-    "}\n",
+    "# d = {\n",
+    "#     \"feature\": [],\n",
+    "#     \"source\": [],\n",
+    "#     \"timestamp\": [],\n",
+    "#     \"value\": []\n",
+    "# }\n",
     "\n",
-    "for region in json_data:\n",
-    "    for dic1 in region:\n",
-    "        feature, source = dic1[\"groupByObject\"][0], dic1[\"groupByObject\"][1]\n",
-    "        for res in dic1[\"result\"]:\n",
-    "            d[\"feature\"].append(feature)\n",
-    "            d[\"source\"].append(source)\n",
-    "            d[\"timestamp\"].append(res[\"timestamp\"])\n",
-    "            d[\"value\"].append(res[\"value\"])\n",
+    "# for region in json_data:\n",
+    "#     for dic1 in region:\n",
+    "#         feature, source = dic1[\"groupByObject\"][0], dic1[\"groupByObject\"][1]\n",
+    "#         for res in dic1[\"result\"]:\n",
+    "#             d[\"feature\"].append(feature)\n",
+    "#             d[\"source\"].append(source)\n",
+    "#             d[\"timestamp\"].append(res[\"timestamp\"])\n",
+    "#             d[\"value\"].append(res[\"value\"])\n",
     "\n",
-    "df = pd.DataFrame(d)\n"
+    "# df = pd.DataFrame(d)\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>feature</th>\n",
-       "      <th>source</th>\n",
-       "      <th>timestamp</th>\n",
-       "      <th>value</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: [feature, source, timestamp, value]\n",
-       "Index: []"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# \n",
-    "df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
